# lamber

./: Cargo.toml  README.md  build.rs  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/tech/dreamfund/lamber/: LamberPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/tech/dreamfund/lamber_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
ios/: lamber.podspec
ios/Classes/: LamberPlugin.h  LamberPlugin.m  SwiftLamberPlugin.swift  lamber.h
lib/: lamber.dart  lamber_method_channel.dart  lamber_platform_interface.dart
lib/src/: bridge.dart
macos/: lamber.podspec
macos/Classes/: LamberPlugin.swift
scripts/: build_android.sh  build_ios.sh  build_macos.sh
src/: api.rs  bridge.rs  lib.rs  localserver.rs
test/: lamber_method_channel_test.dart  lamber_test.dart
